# CrossEntropyThresholding

./: .gitignore  CMakeLists.txt  README.md
EntropyThresholding/: entropy_thresholding.cpp  entropy_thresholding.h  main.cpp  math_log.h
